# mailintel-ai

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
.streamlit/: config.toml
demos/: demo_analyze_email.py  demo_header_parser.py
docs/architecture/: domain-model.md
docs/domain/: evidence.md
docs/engineering/: logging-strategy.md
docs/product/: PRD.md
samples/phishing/: sample.eml
src/mailintel/ai/: __init__.py  investigation_summary.py
src/mailintel/application/services/: investigation_service.py
src/mailintel/collectors/: authentication_collector.py
src/mailintel/collectors/authentication/: __init__.py  authentication_collector.py  dkim.py  dmarc.py  spf.py
src/mailintel/collectors/identity/: __init__.py  identity_collector.py
src/mailintel/collectors/language/: __init__.py  categories.py  language_collector.py  lexicons.py  scorer.py
src/mailintel/collectors/url/: __init__.py  url_collector.py
src/mailintel/domain/: condition.py  enums.py  evidence.py  finding.py  hypothesis.py  inference.py  investigation.py  rule.py
src/mailintel/engine/: hypothesis_engine.py  inference_engine.py  operator_registry.py  rule_engine.py
src/mailintel/intelligence/: __init__.py  domain_intelligence.py
src/mailintel/parsers/: body_parser.py  email_parser.py  header_parser.py
src/mailintel/reporting/: report_builder.py  report_context.py
src/mailintel/scoring/: evidence_scorer.py  risk_engine.py  risk_profile.py
src/mailintel/ui/: app.py
src/mailintel/utils/: investigation_id.py
src/mailintel/workflows/: analyze_email.py
tests/ai/: test_investigation_summary.py
tests/application/: test_investigation_service.py
tests/collectors/: test_authentication_collector.py  test_dkim.py  test_dmarc.py  test_spf.py
tests/collectors/identity/: test_identity_collector.py
tests/collectors/language/: test_language_collector.py
tests/collectors/url/: test_url_collector.py
tests/domain/: test_condition.py  test_evidence.py  test_finding.py  test_hypothesis.py  test_inference.py  test_investigation.py  test_rule.py
tests/engine/: test_hypothesis_engine.py  test_inference_engine.py  test_operator_registry.py  test_rule_engine.py
tests/intelligence/: test_domain_intelligence.py
tests/parsers/: test_body_parser.py  test_email_parser.py  test_header_parser.py
tests/reporting/: test_report_builder.py
tests/reporting/pdf/: test_pdf_report.py
tests/scoring/: test_evidence_scorer.py  test_risk_engine.py  test_risk_profile.py
tests/workflows/: test_analyze_email.py
(+13 files in other folders)
